--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:latest AS build
 
 WORKDIR /app
 
-RUN apt-get update -y
+RUN apt-get update
 RUN apt-get install openjdk-17-jdk -y
 
 COPY . .
